deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ice
spec:
  selector:
    matchLabels:
      app: ice
      env: production
  replicas: 1
  template:
    metadata:
      labels:
        app: ice
        env: production
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/ice:master
        ports:
        - containerPort: 8080
        - containerPort: 8443
        resources:
          requests:
            cpu: "9m"
            memory: "1Gi"
          limits:
            cpu: "475m"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 300
          periodSeconds: 60
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.11
        command: ["/cloud_sql_proxy", "-instances=dd-decaf-cfbf6:europe-west1:dd-decaf=tcp:5432", "-credential_file=/secrets/cloudsql/credentials.json"]
        resources:
          requests:
            cpu: "1m"
          limits:
            cpu: "25m"
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloudsql-instance-credentials
