deployment/service.yml
kind: Service
apiVersion: v1
metadata:
  name: ice
spec:
  selector:
    app: ice
    env: production
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
  - name: https
    protocol: TCP
    port: 443
    targetPort: 8443
