deployment/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ice
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - ice.dd-decaf.eu
    secretName: decaf-tls
  rules:
  - host: ice.dd-decaf.eu
    http:
      paths:
      - path: /
        backend:
          serviceName: ice
          servicePort: 80
